--- a/upload-server/internal/ui/assets/form.css
+++ b/upload-server/internal/ui/assets/form.css
@@ -1,9 +1,3 @@
-body {
-  font-family: Arial, Helvetica, sans-serif;
-  margin: 0 auto;
-  width: 100vw;
-}
-
 .upload-container {
   margin: 0 auto;
   padding: 1.2rem;
@@ -37,13 +31,14 @@ body {
   width: 100%;
 }
 
-.form-container input[type=file] {
+.form-container input[type="file"] {
   display: block;
   font-style: oblique;
   margin-left: 15px;
+  display: none;
 }
 
-.form-container input[type=file]::file-selector-button {
+.form-container input[type="file"]::file-selector-button {
   display: none;
 }
 
