--- a/upload-server/internal/ui/assets/index.css
+++ b/upload-server/internal/ui/assets/index.css
@@ -1,66 +1,69 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html {
-    /* 1 rem = 10px */
-    font-size: 62.5%
+  /* 1 rem = 10px */
+  font-size: 62.5%;
 }
 
 body {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1.4rem;
   margin: 0 auto;
+  width: 100vw;
 }
 
 a.skip-main {
-    left:-999px;
-    position:absolute;
-    top:auto;
-    width:1px;
-    height:1px;
-    overflow:hidden;
-    z-index:-999;
+  left: -999px;
+  position: absolute;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  z-index: -999;
 }
-a.skip-main:focus, a.skip-main:active {
-    color: #fff;
-    background-color:#000;
-    left: auto;
-    top: auto;
-    width: 30%;
-    height: auto;
-    overflow:auto;
-    margin: 10px 35%;
-    padding:5px;
-    border-radius: 15px;
-    border:4px solid yellow;
-    text-align:center;
-    font-size:1.2em;
-    z-index:999;
+a.skip-main:focus,
+a.skip-main:active {
+  color: #fff;
+  background-color: #000;
+  left: auto;
+  top: auto;
+  width: 30%;
+  height: auto;
+  overflow: auto;
+  margin: 10px 35%;
+  padding: 5px;
+  border-radius: 15px;
+  border: 4px solid yellow;
+  text-align: center;
+  font-size: 1.2em;
+  z-index: 999;
 }
 
 .hidden {
-    display: none;
+  display: none;
 }
 
 .nav-container {
-    background-color: #f4f4f4;
-    border-bottom: 1px solid #c5c5c5;
-    font-size: 1.6rem;
-    font-weight: 700;
-    padding: 1rem;
+  background-color: #f4f4f4;
+  border-bottom: 1px solid #c5c5c5;
+  font-size: 1.6rem;
+  font-weight: 700;
+  padding: 1rem;
 }
 
-.nav-container a, a:visited {
-    color: #000;
-    text-decoration: none;
+.nav-container a,
+a:visited {
+  color: #000;
+  text-decoration: none;
 }
 
 .nav-container a:hover {
-    color: #000;
-    border-bottom: 1px solid #000;
+  color: #000;
+  border-bottom: 1px solid #000;
 }
 
 .nav-container img {
-    width: 7.5rem !important;
+  width: 7.5rem !important;
 }
