--- a/upload-server/internal/ui/assets/status.css
+++ b/upload-server/internal/ui/assets/status.css
@@ -1,3 +1,22 @@
-#upload-status-container #upload-status .success {
+.upload-success {
   color: rgb(6, 162, 6);
+}
+
+.upload-failure {
+  color: rgb(155, 0, 0);
+}
+
+#location-highlight {
+  background-color:rgb(255, 255, 56);
+  border: 2px solid rgb(104, 0, 222);
+  padding: 3px;
+}
+
+#upload-list {
+  margin: 10px 0;
+  line-height: 2.5rem;
+}
+
+#upload-status, #file-info, #upload-info-extra {
+  padding-left: 3px;
 }
