--- a/upload-server/internal/ui/components/navbar.html
+++ b/upload-server/internal/ui/components/navbar.html
@@ -1,10 +1,12 @@
 {{define "navbar"}}
-  <nav>
+  <div>
     <a class="skip-main" href="#main" tabindex="0">Skip to main content</a>
-    <div role="navigation" id="nav" class="nav-container">
-      <a href="/">
-        <img src="/assets/dex_logo.svg" alt="DEX logo" /> Upload
-      </a>
+    <div class="nav-container">
+      <nav  role="navigation" id="nav">
+        <a href="/">
+          <img src="/assets/dex_logo.svg" alt="DEX logo" /> Upload
+        </a>
+      </nav>
     </div>
-  </nav>
+  </div>
 {{end}}
