--- a/upload-server/internal/ui/upload.tmpl
+++ b/upload-server/internal/ui/upload.tmpl
@@ -1,175 +1,198 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <link rel="stylesheet" href="/assets/index.css">
-        <link rel="stylesheet" href="/assets/form.css">
-        <link rel="stylesheet" href="/assets/progress.css">
-        <link rel="stylesheet" href="/assets/file-info.css">
-        <link rel="icon" type="image/x-icon" href="/assets/dex_logo.svg" />
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>DEX Upload</title>
-    </head>
-    <body>
-        {{template "navbar" .Navbar}}
-        <main id="main">
-            <div class="upload-container">
-                <div class="alert alert-warining hidden" id="support-alert">
-                    <b>Warning!</b> Your browser does not seem to support the features necessary to run tus-js-client. The buttons below may work but probably will fail silently.
-                </div>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" type="text/css" href="/assets/index.css" />
+    <link rel="stylesheet" type="text/css" href="/assets/form.css" />
+    <link rel="stylesheet" type="text/css" href="/assets/progress.css" />
+    <link rel="stylesheet" type="text/css" href="/assets/file-info.css" />
+    <link rel="icon" type="image/x-icon" href="/assets/dex_logo.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>DEX Upload</title>
+  </head>
+  <body>
+    {{template "navbar" .Navbar}}
+    <main id="main">
+      <div class="upload-container">
+        <div class="alert alert-warining hidden" id="support-alert">
+          <b>Warning!</b> Your browser does not seem to support the features
+          necessary to run tus-js-client. The buttons below may work but
+          probably will fail silently.
+        </div>
 
-                <h1 class="new-upload">File Uploader</h1>
-                <h1 class="resume-upload">Resume Upload</h1>
-    
-                <div class="form-container">
-                    <div class="input-group new-upload">
-                        <label for="endpoint">
-                            Upload endpoint:
-                        </label>
-                        <input type="text" id="endpoint" name="endpoint" value="http://localhost:8080/files/">
-                        <!-- http://localhost:8080/files/ -->
-                        <!-- https://tusd.tusdemo.net/files/ -->
-                        <!-- https://apidev.cdc.gov/upload -->
-                    </div>
-                    <div class="input-group new-upload">
-                        <label for="chunksize">
-                            Chunk size (bytes):
-                        </label>
-                        <input type="number" id="chunksize" name="chunksize" value="40000000">
-                        <p><b>Note:</b> Chunksize should be set on the client for uploading files of large size (1GB or over).</p>
-                    </div>
-                    <div class="input-group new-upload">
-                        <label for="paralleluploads">
-                            Parallel upload requests:
-                        </label>
-                        <input type="number" id="paralleluploads" name="paralleluploads" value="1" disabled>
-                    </div>
-                    <div class="input-group">
-                        <label>
-                            Metadata JSON object (file name will be inferred from each file):
-                            <div class="file-container">
-                                <button onclick="files.click()">Browse Files</button>
-                                <input type="file" id="files">
-                            </div>
-                        </label>
-                    </div>
-                </div>
+        <h1 class="new-upload">File Uploader</h1>
+        <h1 class="resume-upload">Resume Upload</h1>
 
-                <div class="span8 progress-container">
-                    <div class="progress progress-striped progress-success hidden">
-                        <div class="bar hidden" style="width: 0%;"></div>
-                    </div>
-                </div>
-                <hr />
+        <div class="form-container">
+          <div class="input-group new-upload">
+            <label for="endpoint"> Upload endpoint: </label>
+            <input
+              type="text"
+              id="endpoint"
+              name="endpoint"
+              value="http://localhost:8080/files/"
+            />
+            <!-- http://localhost:8080/files/ -->
+            <!-- https://tusd.tusdemo.net/files/ -->
+            <!-- https://apidev.cdc.gov/upload -->
+          </div>
+          <div class="input-group new-upload">
+            <label for="chunksize"> Chunk size (bytes): </label>
+            <input
+              type="number"
+              id="chunksize"
+              name="chunksize"
+              value="40000000"
+            />
+            <p>
+              <b>Note:</b> Chunksize should be set on the client for uploading
+              files of large size (1GB or over).
+            </p>
+          </div>
+          <div class="input-group new-upload">
+            <label for="paralleluploads"> Parallel upload requests: </label>
+            <input
+              type="number"
+              id="paralleluploads"
+              name="paralleluploads"
+              value="1"
+              disabled
+            />
+          </div>
+          <div class="input-group">
+            <label>
+              Metadata JSON object (file name will be inferred from each file):
+              <div class="file-container">
+                <button onclick="files.click()">Browse Files</button>
+                <input type="file" id="files" />
+              </div>
+            </label>
+          </div>
+        </div>
+
+        <div class="span8 progress-container">
+          <div class="progress progress-striped progress-success hidden">
+            <div class="bar hidden" style="width: 0%"></div>
+          </div>
+        </div>
+        <hr />
+      </div>
+      <div class="file-info-container">
+        <div class="file-id">
+          <h1>{{.Info.Manifest.received_filename}}</h1>
+          <strong>ID: {{.Info.Manifest.upload_id}}</strong>
+        </div>
+
+        <div class="file-info" id="upload-status">
+          <h2>
+            Upload Status:
+            <span
+              class="item-value"
+              id="upload-status-value upload-status-{{.Info.UploadStatus.Status}}"
+            >
+              {{.Info.UploadStatus.Status}}
+            </span>
+          </h2>
+          <div class="small-italic">
+            <div class="upload-in-progress">
+              <span class="label"> Last Partial Upload At: </span>
+              <span id="upload-datetime-value">
+                {{FormatDateTime .Info.UploadStatus.LastChunkReceived}}
+              </span>
             </div>
-            <div class="file-info-container">
-                <div class="file-info" id="manifest-info">
-                    <h2>Manifest</h2>
-                    <div class="info-item">
-                        <div class="item-name">File Name:</div>
-                        <div class="item-value">{{.Info.Manifest.received_filename}}</div>
-                    </div>
-                    <div class="info-item">
-                        <div class="item-name">Upload ID:</div>
-                        <div class="item-value">{{AllUpperCase .Info.Manifest.upload_id}}</div>
-                    </div>
-                    <div class="info-item">
-                        <div class="item-name">Version:</div>
-                        <div class="item-value">{{.Info.Manifest.version}}</div>
-                    </div>
-                    <div class="info-item">
-                        <div class="item-name">Sender ID:</div>
-                        <div class="item-value">{{AllUpperCase .Info.Manifest.sender_id}}</div>
-                    </div>
-                    <div class="info-item">
-                        <div class="item-name">Producer ID:</div>
-                        <div class="item-value">{{AllUpperCase .Info.Manifest.data_producer_id}}</div>
-                    </div>
-                    <div class="info-item">
-                        <div class="item-name">Stream ID:</div>
-                        <div class="item-value">{{AllUpperCase .Info.Manifest.data_stream_id}}</div>
-                    </div>
-                    <div class="info-item">
-                        <div class="item-name">Stream Route:</div>
-                        <div class="item-value">{{AllUpperCase .Info.Manifest.data_stream_route}}</div>
-                    </div>
-                    <div class="info-item">
-                        <div class="item-name">Jurisdiction:</div>
-                        <div class="item-value">{{AllUpperCase .Info.Manifest.jurisdiction}}</div>
-                    </div>
-                    <div class="info-item">
-                        <div class="item-name">Ingest Date/Time:</div>
-                        <div class="item-value">{{FormatDateTime .Info.Manifest.dex_ingest_datetime}}</div>
-                    </div>
-                </div>
-                <div class="file-info" id="file-info">
-                    <h2>File Information</h2>
-                    <div class="info-item">
-                        <div class="item-name">File Size:</div>
-                        <div class="item-value">{{.Info.FileInfo.size_bytes}} bytes</div>
-                    </div>
-                    <div class="info-item">
-                        <div class="item-name">Updated At:</div>
-                        <div class="item-value">{{FormatDateTime .Info.FileInfo.updated_at}}</div>
-                    </div>
-                </div>
-                <div class="file-info" id="upload-status">
-                    <h2>Upload Status</h2>
-                    <div class="info-item">
-                        <div class="item-name">Upload Status:</div>
-                        <div class="item-value" id="upload-status-value">{{.Info.UploadStatus.Status}}</div>
-                    </div>
-                    <div class="info-item">
-                        <div class="item-name">Last Chunk Received:</div>
-                        <div class="item-value" id="upload-datetime-value">{{FormatDateTime .Info.UploadStatus.LastChunkReceived}}</div>
-                    </div>
-                </div>
-
-                {{if .Info.Deliveries}}
-                <div class="file-info" id="file-deliveries">
-                    <h2>Delivery Status</h2>
-                    {{range .Info.Deliveries}}
-                    <div id="file-delivery">
-                        <div class="info-item">
-                            <div class="item-name">Name:</div>
-                            <div class="item-value">{{.Name}}</div>
-                        </div>
-                        <div class="info-item">
-                            <div class="item-name">Location:</div>
-                            <div class="item-value">{{.Location}}</div>
-                        </div>
-                        <div class="info-item">
-                            <div class="item-name">Delivery Status:</div>
-                            <div class="item-value delivery-{{AllLowerCase .Status}}">{{.Status}}</div>
-                        </div>
-                        <div class="info-item">
-                            <div class="item-name">Delivered At:</div>
-                            <div class="item-value">{{FormatDateTime .DeliveredAt}}</div>
-                        </div>
-                        <div class="info-item">
-                            <div class="item-name">Issues:</div>
-                            <div class="item-value">
-                            {{if .Issues}}
-                                <ul>
-                                {{range .Issues}}
-                                    <li>{{.}}</li>
-                                {{end}}
-                                </ul>
-                            {{else}}
-                                No issues
-                            {{end}}
-                            </div>
-                        </div>
-                    </div>
-                    {{end}}
-                </div>
-                {{end}}
+            <div class="upload-complete">
+              <span class="label"> Uploaded At: </span>
+              <span> {{FormatDateTime .Info.FileInfo.updated_at}} </span>
             </div>
-        </main>
-    </body>
+          </div>
+        </div>
 
-    <script>const uploadUrl="{{.UploadUrl}}"</script>
-    <script>const uploadStatusLevel="{{.UploadStatusLevel}}"</script>
-    <script src="https://cdn.jsdelivr.net/npm/tus-js-client@latest/dist/tus.js"></script>
-    <script src="/assets/tusclient.js"></script>
+        {{if .Info.Deliveries}}
+        <div class="file-info" id="file-deliveries">
+          <h2>Delivery Status</h2>
+          {{range .Info.Deliveries}}
+          <div id="file-delivery">
+            <h3>{{.Name}}</h3>
+            <div class="info-item">
+              <div class="item-name">Delivery Status:</div>
+              <div class="item-value delivery-{{AllLowerCase .Status}}">
+                {{.Status}}
+              </div>
+            </div>
+            <div class="info-item">
+              <div class="item-name">Location:</div>
+              <div class="item-value">{{.Location}}</div>
+            </div>
+            <div class="info-item">
+              <div class="item-name">Delivered At:</div>
+              <div class="item-value">{{FormatDateTime .DeliveredAt}}</div>
+            </div>
+            {{if .Issues}}
+            <div class="info-item">
+              <div class="item-name">Issues:</div>
+              <div class="item-value">
+                {{if .Issues}}
+                <ul>
+                  {{range .Issues}}
+                  <li>{{.}}</li>
+                  {{end}}
+                </ul>
+                {{else}} No issues {{end}}
+              </div>
+            </div>
+            {{end}}
+          </div>
+          {{end}}
+        </div>
+        {{end}}
+
+        <div class="file-info" id="manifest-info">
+          <h2>Manifest</h2>
+          <div class="info-item">
+            <div class="item-name">Version:</div>
+            <div class="item-value">{{.Info.Manifest.version}}</div>
+          </div>
+          <div class="info-item">
+            <div class="item-name">Sender ID:</div>
+            <div class="item-value">
+              {{AllUpperCase .Info.Manifest.sender_id}}
+            </div>
+          </div>
+          <div class="info-item">
+            <div class="item-name">Producer ID:</div>
+            <div class="item-value">
+              {{AllUpperCase .Info.Manifest.data_producer_id}}
+            </div>
+          </div>
+          <div class="info-item">
+            <div class="item-name">Stream ID:</div>
+            <div class="item-value">
+              {{AllUpperCase .Info.Manifest.data_stream_id}}
+            </div>
+          </div>
+          <div class="info-item">
+            <div class="item-name">Stream Route:</div>
+            <div class="item-value">
+              {{AllUpperCase .Info.Manifest.data_stream_route}}
+            </div>
+          </div>
+          <div class="info-item">
+            <div class="item-name">Jurisdiction:</div>
+            <div class="item-value">
+              {{AllUpperCase .Info.Manifest.jurisdiction}}
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+  </body>
+
+  <script>
+    const uploadUrl = "{{.UploadUrl}}";
+  </script>
+  <script>
+    const uploadStatusLevel = "{{.UploadStatusLevel}}";
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/tus-js-client@latest/dist/tus.js"></script>
+  <script src="/assets/tusclient.js"></script>
 </html>
