add upload new file to nav

--- a/upload-server/internal/ui/assets/index.css
+++ b/upload-server/internal/ui/assets/index.css
@@ -19,6 +19,11 @@ main, nav {
   max-width: 750px;
 }
 
+nav {
+  display: flex;
+  justify-content: space-between;
+}
+
 a.skip-main {
   left: -999px;
   position: absolute;
