--- a/upload-server/internal/ui/components/navbar.html
+++ b/upload-server/internal/ui/components/navbar.html
@@ -6,6 +6,8 @@
         <a href="/">
           <img src="/assets/dex_logo.svg" alt="DEX logo" /> Upload
         </a>
+
+          {{template "newuploadbtn" .Newuploadbtn}}
       </nav>
     </div>
   </div>
